# AxwareLiveResults

./: pyproject.toml
src/axware/: parser.py
tests/mock_data/: results_live_multirow.htm  results_live_multirow.json  results_live_nesvt.htm  results_live_nesvt.json  results_live_onerow.htm  results_live_onerow.json
